--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
     <head><link rel="stylesheet" href="./css/main.css">
+        <link rel="stylesheet" href="./css/all.min.css">
     <body>
     <div class="Home" id="Home">
       <div class="nav">
